# kafka-buffer

./: .gitignore  Cargo.toml  buffered_http_request.capnp  build.rs  example.config  justfile  kafka_buffer.config  rust-toolchain.toml  sample_data.txt
.github/workflows/: rust.yml
benches/: encoding_speed.rs
src/: config.pest  config.rs  lib.rs  observability.rs
