[package]
name = "kafka-buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
futures = "0.3.30"
kafka = "0.10.0"
rdkafka = "0.36.2"
redis = "0.26.1"
sidekiq = "0.12.0"
tokio = { version = "1.39.3", features = ["full"] }