[package]
name = "kafka-buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.30"
http-body-util = "0.1.2"
hyper = "1.4.1"
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1.4"
pest = "2.7"
pest_derive = "2.7"
prometheus = "0.13.3"
rand = "0.8.5"
rand_distr = "0.4.3"
rdkafka = "0.36.2"
redis = "0.26.1"
sidekiq = "0.12.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
url = "2.5.0"